--- a/index.html
+++ b/index.html
@@ -1,29 +1,36 @@
 <!DOCTYPE html>
-<center>
+
+
 
 <hr size="20" noshade color="purple">
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="utf-8">
     <title>Ankit's personal website</title>
-  </head>
-  <body>
-    <h1>...Welcome To My personal Site...</h1>
 
+  </head>
+
+  <body >
+    <div class="part1">
+      <center>
+
+  <marquee >  <h1 id="mainHeading">...Welcome To My personal Site...</h1></marquee>
+</center>
     <table cellspacing="20">
       <tr>
-        <td> <img src="ankit104.jpg" alt="ankit profile picture" height="160" width="160">
+        <td> <img class="circular" border="2" src="ankit104.jpg" alt="ankit profile picture" height="200" width="200">
 </td>
 <td>  <h2>Ankit Singh</h2>
   <p>Founder and CEO of <em><strong><a href="http://www.mygla.in">mygla.in</a></strong></em>.</p>
-  <p>I am a Student and being an Engineer.</p></td>
+  <p>I am a Student and being a Developer.</p></td>
       </tr>
     </table>
 
-    <hr size="5" noshade color="purple">
+    <hr size="3" noshade color="purple">
+</div>
+
 </center>
-
-
 <h3><strong>Our running project <em>mygla.in</em></strong></h3>
 <h4>Features..</h4>
   <ul>
@@ -39,7 +46,15 @@
       <li>and many more...</li>
     </ol>
   </ul>
+  <div class="part1">
+  <hr size="3" noshade color="purple" >
+
+
+
   <h3><a href="myContact.html">Contact me</a></h3>
+
+  <hr size="3" noshade color="purple" >
+</div>
   <h3>Experience/study</h3>
 <table border="3" cellspacing="5">
 
@@ -66,7 +81,11 @@
     <td>class 10th</td>
   </tr>
 </table>
-<hr >
+<div class="part1">
+<hr size="3" noshade color="purple" >
+
+
+
 <h3>Skills</h3>
 <ul>
   <li>All Rating on the basis of Five Star.</li>
@@ -97,6 +116,11 @@
     <td>⭐⭐⭐</td>
   </tr>
 </table>
+
 <hr>
-  </body>
+</div>
+<center>
+<footer>&copy;All Right Resereved 2020</footer>
+</center>
+</body>
 </html>
