--- a/myContact.html
+++ b/myContact.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+
+    <link rel="stylesheet" href="styles.css">
     <meta charset="utf-8">
     <title>Contact me</title>
   </head>
-  <body>
-    <h3>Contact me</h3>
+  <body style="background-color:#def4f0">
+    <h2>Contact me</h2>
     <ul>
-      <li>Mobile no.= <strong>+91 9455837582</strong></li>
+  <!--    <li>Mobile no.= <strong>+91 9455837582</strong></li> -->
       <li>E-mail= <strong>ankitsingh.as.103@gmail.com</strong></li>
     </ul>
     <h3>For enquiry...</h3>
@@ -26,6 +28,7 @@
       <input type="checkbox" name="" value=""><br>
       <input type="submit" name="">
     </form>
+    <a st href="index.html">Home page</a>
 
   </body>
 </html>
