--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </div>
 
 </center>
-<h3><strong>Our running project <em>mygla.in</em></strong></h3>
+<!-- <h3><strong>Our running project <em>mygla.in</em></strong></h3>
 <h4>Features..</h4>
   <ul>
     <li>All point to be basic and advanced level.</li>
@@ -45,7 +45,7 @@
       <li>Linux</li>
       <li>and many more...</li>
     </ol>
-  </ul>
+  </ul> -->
   <div class="part1">
   <hr size="3" noshade color="purple" >
 
